Added icons and background colors for templates

--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -1,7 +1,7 @@
 <div class="card m-3 " style="width: 20rem;">
-    <div class="card-header text-white bg-primary">
+    <div class="card-header text-white" style="background-color: #bf4895">
         <h3>${engineer.name}</h3>
-        <h5>${engineer.getRole()}</h5>
+        <h5><i class="fas fa-glasses"></i> ${engineer.getRole()}</h5>
     </div>
     <div class="card-body bg-light text-dark">
         <ul class="list-group">
