--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,7 +1,7 @@
 <div class="card m-3 " style="width: 20rem;">
-    <div class="card-header text-white bg-primary">
+    <div class="card-header text-white" style="background-color: #bf5c48">
         <h3>${intern.name}</h3>
-        <h5>${intern.getRole()}</h5>
+        <h5><i class="fas fa-graduation-cap"></i> ${intern.getRole()}</h5>
     </div>
     <div class="card-body bg-light text-dark">
         <ul class="list-group">
